--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <!-- PAGINA PRINCIPALĂ -->
+    <!-- PAGINA PRINCIPALA -->
     <section id="home" class="hero">
         <div class="container">
             <h2>Descoperă Golf 5</h2>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
 
-                <!-- Panou Fizică -->
+                <!-- Panou Fizica -->
                 <div class="physics-panel">
                     <h3>Performanță</h3>
                     <div class="physics-metrics">
@@ -216,7 +216,6 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
